fix: set min height instead of using visibility

--- a/css/style.sass
+++ b/css/style.sass
@@ -181,6 +181,7 @@ $feat-colors2: #132d45, #06233c, #00132a
   padding-right: 0px!important
 
 .gs-main-section
+  min-height: 700px
   background-color: #0e1624!important
   margin-bottom: 0px!important
   padding-right: 0px!important
@@ -528,13 +529,9 @@ $feat-colors2: #132d45, #06233c, #00132a
 
 .submission-form
   display: none
-  position: absolute
-  bottom: 550px
 
 .om-section
   display: none
-  position: absolute
-  bottom: 550px
 
 .sign-up-container
   width: 150px
